[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/titile.png" type="Texture" id=1]
[ext_resource path="res://default_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/ChatDipaly.gd" type="Script" id=3]
[ext_resource path="res://scripts/GameManager.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.74902, 0, 1 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 2 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.196078, 0.196078, 0.196078, 0.752941 )

[node name="GameManager" type="Node"]
script = ExtResource( 4 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="UILayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="UILayer/Control/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Title" type="TextureRect" parent="UILayer/Control/MainMenu"]
anchor_top = 0.069
anchor_right = 1.0
anchor_bottom = 0.462
margin_top = -0.0809402
margin_bottom = 0.119049
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/Control/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -4.3573
margin_right = 66.0
margin_bottom = 83.6427
theme = SubResource( 2 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerButton" type="Button" parent="UILayer/Control/MainMenu/VBoxContainer"]
margin_right = 132.0
margin_bottom = 42.0
focus_mode = 1
text = "创建主机"

[node name="ClientButton" type="Button" parent="UILayer/Control/MainMenu/VBoxContainer"]
margin_top = 57.0
margin_right = 132.0
margin_bottom = 99.0
focus_mode = 1
text = "连接到主机"

[node name="QuitButton" type="Button" parent="UILayer/Control/MainMenu/VBoxContainer"]
margin_top = 114.0
margin_right = 132.0
margin_bottom = 156.0
focus_mode = 1
text = "退出游戏"

[node name="ChatDipaly" type="Control" parent="UILayer/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -349.0
margin_right = 556.0
theme = SubResource( 3 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultVBoxContainer" type="VBoxContainer" parent="UILayer/Control/ChatDipaly"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -27.0
grow_vertical = 0
mouse_filter = 2
size_flags_vertical = 8
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CmdVBoxContainer" type="VBoxContainer" parent="UILayer/Control/ChatDipaly"]
anchor_right = 1.0
margin_top = 320.29
margin_bottom = 348.29
grow_vertical = 0
size_flags_horizontal = 11
size_flags_vertical = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HistoryScrollContainer" type="ScrollContainer" parent="UILayer/Control/ChatDipaly/CmdVBoxContainer"]
margin_top = 12.0
margin_right = 556.0
margin_bottom = 12.0
grow_vertical = 0
size_flags_horizontal = 11
size_flags_vertical = 10
custom_styles/bg = SubResource( 4 )
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[node name="HistroyVBoxContainer" type="VBoxContainer" parent="UILayer/Control/ChatDipaly/CmdVBoxContainer/HistoryScrollContainer"]
margin_right = 556.0
grow_vertical = 0
size_flags_horizontal = 11
size_flags_vertical = 8

[node name="CmdLineEdit" type="LineEdit" parent="UILayer/Control/ChatDipaly/CmdVBoxContainer"]
margin_top = 16.0
margin_right = 556.0
margin_bottom = 62.0
[connection signal="command_entered" from="UILayer/Control/ChatDipaly" to="." method="_on_ChatDipaly_command_entered"]
[connection signal="gui_input" from="UILayer/Control/ChatDipaly/CmdVBoxContainer/CmdLineEdit" to="UILayer/Control/ChatDipaly" method="_on_CmdLineEdit_gui_input"]
[connection signal="text_entered" from="UILayer/Control/ChatDipaly/CmdVBoxContainer/CmdLineEdit" to="UILayer/Control/ChatDipaly" method="_on_CmdLineEdit_text_entered"]
